--- a/Text_Preprocessig/basic_preprocess.ipynb
+++ b/Text_Preprocessig/basic_preprocess.ipynb
@@ -116,6 +116,10 @@
     }
    ],
    "source": [
+    "\"\"\" \n",
+    "    This function is used to remove stop words from given sentence\n",
+    "\"\"\"\n",
+    "\n",
     "def stop_words(str):\n",
     "    new_txt=[]\n",
     "    for word in str.split():\n",
