imdb sentiment analysis using BOW

--- a/NLP_Model/imdb_sentiment_analysis_with_bow.ipynb
+++ b/NLP_Model/imdb_sentiment_analysis_with_bow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1.py', 'IMDB_Dataset.xlsx']"
+       "['1.py', 'amazon_reviews.csv', 'IMDB_Dataset.xlsx']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "4  Petter Mattei's \"Love in the Time of Money\" is...  positive"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "freq                                                    1       558"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "['i', 'me', 'my']"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "9  If you like original gut wrenching laughter yo...  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "9  If you like original gut wrench laughter you w...  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,9 +616,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import BertTokenizer\n",
     "\n",
@@ -629,8 +637,8 @@
     "    # Tokenize into sub words\n",
     "    tokens = tokenizer.tokenize(text)\n",
     "\n",
-    "    # Remove stop words and punctuation in one go\n",
-    "    tokens =[token.strip() for token in tokens if token not in stop_words_list and token not in string.punctuation]\n",
+    "    # Remove stop words and punctuation and numbers in one go\n",
+    "    tokens =[token.strip() for token in tokens if token not in stop_words_list and token not in string.punctuation and not token.isdigit()]\n",
     "\n",
     "    # Reassemble the tokens into a single string\n",
     "    text = ' '.join(tokens)\n",
@@ -640,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +695,7 @@
        "      <td>positive</td>\n",
        "      <td>One of the other reviewers has mentioned that ...</td>\n",
        "      <td>One of the other reviewers have mention that a...</td>\n",
-       "      <td>one reviewers mention watch 1 oz episode hook ...</td>\n",
+       "      <td>one reviewers mention watch oz episode hook ri...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -748,20 +756,129 @@
        "4  Petter Mattei 's `` Love in the Time of Money ...   \n",
        "\n",
        "                                     review_clean_v2  \n",
-       "0  one reviewers mention watch 1 oz episode hook ...  \n",
+       "0  one reviewers mention watch oz episode hook ri...  \n",
        "1  wonderful little production film technique una...  \n",
        "2  think wonderful way spend time hot summer week...  \n",
        "3  basically family little boy jake think zombie ...  \n",
        "4  pet ##ter matt ##ei love time money visually s...  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "imdb_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentiment\n",
+      "1    558\n",
+      "0    556\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>one reviewers mention watch oz episode hook ri...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>wonderful little production film technique una...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>think wonderful way spend time hot summer week...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>basically family little boy jake think zombie ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review  sentiment\n",
+       "0  one reviewers mention watch oz episode hook ri...          1\n",
+       "1  wonderful little production film technique una...          1\n",
+       "2  think wonderful way spend time hot summer week...          1\n",
+       "3  basically family little boy jake think zombie ...          0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "final_imdb = imdb_df[['review_clean_v2','sentiment']]\n",
+    "final_imdb.columns = ['review','sentiment']\n",
+    "\n",
+    "final_imdb['sentiment'] = final_imdb['sentiment'].map({'positive':1,'negative':0,'neutral':2})\n",
+    "print(final_imdb['sentiment'].value_counts())\n",
+    "final_imdb.head(4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(891,) (223,) (891,) (223,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Divide Train and Test data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train,X_test,y_train,y_test = train_test_split(final_imdb['review'],final_imdb['sentiment'],test_size=0.2,random_state=42)\n",
+    "print(X_train.shape,X_test.shape,y_train.shape,y_test.shape)\n"
    ]
   },
   {
@@ -774,9 +891,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    {'acc': 1, 'agenda': 1, 'agreements': 1, 'appe...\n",
+       "1    {'actors': 1, 'bbc': 1, 'chosen': 1, 'come': 1...\n",
+       "2    {'ada': 1, 'addiction': 1, 'air': 1, 'allen': ...\n",
+       "Name: bow, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
@@ -787,15 +918,276 @@
     "    bow = cv.fit_transform([text]) #Input should be iterable so we making it as list\n",
     "\n",
     "    # Convert the sparse matrix to an array and return it\n",
-    "    return bow.toarray()"
+    "    return dict(zip(cv.get_feature_names_out(),  bow.toarray()[0]))\n",
+    "\n",
+    "\n",
+    "imdb_df['bow'] = imdb_df['review_clean_v2'].apply(bow)\n",
+    "imdb_df['bow'].head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "381     1\n",
+       "327     0\n",
+       "998     0\n",
+       "959     0\n",
+       "582     1\n",
+       "       ..\n",
+       "466     1\n",
+       "121     1\n",
+       "1044    1\n",
+       "1095    0\n",
+       "860     1\n",
+       "Name: sentiment, Length: 891, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# max_features=5000: Limits the number of features to the top 5000 most frequent words.\n",
+    "# stop_words='english': This removes common English stop words like \"the\", \"and\", \"is\", etc.\n",
+    "\n",
+    "cv = CountVectorizer(stop_words='english', max_features=5000)\n",
+    "x_train_bow = cv.fit_transform(X_train) # Learn the vocabulary and transform training data into vectors\n",
+    "\n",
+    "x_test_bow = cv.transform(X_test) #  Transform the test data using the same vocabulary (without fitting again)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(891, 5000)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train_bow.shape # as we have taken max_features =5000 so it had created with 5000 dimension vector using BOW technique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(223, 5000)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test_bow.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Apply Naive Bayes Model\n",
+    "    * Naive Bayes is good for text classification like sentiment analysis when we are working on BOW and TF-DIF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score is 0.7892\n",
+      "classification_report ....\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.76      0.85      0.80       111\n",
+      "           1       0.83      0.73      0.78       112\n",
+      "\n",
+      "    accuracy                           0.79       223\n",
+      "   macro avg       0.79      0.79      0.79       223\n",
+      "weighted avg       0.79      0.79      0.79       223\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Naive Bayes Model for prediction\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "\n",
+    "# Train a classifier (Naive Bayes)\n",
+    "nb_model = MultinomialNB()\n",
+    "nb_model.fit(x_train_bow,y_train)\n",
+    "\n",
+    "# Prediction\n",
+    "y_pred = nb_model.predict(x_test_bow)\n",
+    "\n",
+    "#Evaluate the Model\n",
+    "print(f\"accuracy_score is {accuracy_score(y_test,y_pred):.4f}\")\n",
+    "print(\"classification_report ....\")\n",
+    "print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Apply Xgboost on BOW\n",
+    "    * Gradient Boosting methods (like XGBoost) can often outperform simpler models but are computationally more expensive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score is 0.7937\n",
+      "classification_report ....\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.79      0.79      0.79       111\n",
+      "           1       0.79      0.79      0.79       112\n",
+      "\n",
+      "    accuracy                           0.79       223\n",
+      "   macro avg       0.79      0.79      0.79       223\n",
+      "weighted avg       0.79      0.79      0.79       223\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost as xgb\n",
+    "\n",
+    "xgb_model = xgb.XGBClassifier()\n",
+    "xgb_model.fit(x_train_bow,y_train)\n",
+    "y_pred = xgb_model.predict(x_test_bow)\n",
+    "#Evaluate the Model\n",
+    "print(f\"accuracy_score is {accuracy_score(y_test,y_pred):.4f}\")\n",
+    "print(\"classification_report ....\")\n",
+    "print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Apply Support Vector Machine (SVM) on BOW\n",
+    "    * SVM is often a strong choice for text classification. It works well in high-dimensional spaces (such as those in text data) and can handle both linear and non-linear classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score is 0.7892\n",
+      "classification_report ....\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.78      0.80      0.79       111\n",
+      "           1       0.80      0.78      0.79       112\n",
+      "\n",
+      "    accuracy                           0.79       223\n",
+      "   macro avg       0.79      0.79      0.79       223\n",
+      "weighted avg       0.79      0.79      0.79       223\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm_model = SVC(kernel='linear')  # Linear kernel is usually preferred for text classification\n",
+    "svm_model.fit(x_train_bow,y_train)\n",
+    "y_pred = svm_model.predict(x_test_bow)\n",
+    "\n",
+    "#Evaluate the Model\n",
+    "print(f\"accuracy_score is {accuracy_score(y_test,y_pred):.4f}\")\n",
+    "print(\"classification_report ....\")\n",
+    "print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pre_process(txt):\n",
+    "   # Here we are doing all pre processing steps such as stop words, digits, stemming etc\n",
+    "   txt = remove_stop_words(txt)\n",
+    "   txt = stem_review(txt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3044369966.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[27], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Prediction with new data\n",
+    "\n",
+    "def predict_analysis(txt):\n",
+    "    # Step 1. Do Pre Process\n",
+    "    txt = pre_process(txt)\n",
+    "    pred = nb_model.predict(txt)\n",
+    "    print(f\"pred is {pred}\")\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
