word2vec model building

--- a/NLP_Model/amazon_review_sentiment_analysis_with_wordvec.ipynb
+++ b/NLP_Model/amazon_review_sentiment_analysis_with_wordvec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "['1.py', 'amazon_reviews.csv', 'IMDB_Dataset.xlsx']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "3                   0.0                 0.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "(4915, 12)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "max              0.957544  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,16 +416,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0              0\n",
+       "reviewerName            1\n",
+       "overall                 0\n",
+       "reviewText              1\n",
+       "reviewTime              0\n",
+       "day_diff                0\n",
+       "helpful_yes             0\n",
+       "helpful_no              0\n",
+       "total_vote              0\n",
+       "score_pos_neg_diff      0\n",
+       "score_average_rating    0\n",
+       "wilson_lower_bound      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "review_df.drop(columns=['Unnamed: 0'],axis=1,inplace=True)"
+    "review_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1. Removing null values from dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4915, 12)"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review_df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4913, 12)"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2. Remove Unwanted features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -549,12 +635,13 @@
        "3              0.852525            0.818577  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "review_df.drop(columns=['Unnamed: 0'],axis=1,inplace=True)\n",
     "review_df = review_df.sort_values(ascending=False,by='wilson_lower_bound')\n",
     "review_df = review_df.reset_index(drop=True)\n",
     "review_df.head(4)"
@@ -562,10 +649,316 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "overall\n",
+       "5.0    3921\n",
+       "4.0     526\n",
+       "1.0     244\n",
+       "3.0     142\n",
+       "2.0      80\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_df['overall'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>overall</th>\n",
+       "      <th>reviewText</th>\n",
+       "      <th>wilson_lower_bound</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>[[ UPDATE - 6/19/2014 ]]So my lovely wife boug...</td>\n",
+       "      <td>0.957544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>I have tested dozens of SDHC and micro-SDHC ca...</td>\n",
+       "      <td>0.936519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NOTE:  please read the last update (scroll to ...</td>\n",
+       "      <td>0.912139</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   overall                                         reviewText  \\\n",
+       "0      5.0  [[ UPDATE - 6/19/2014 ]]So my lovely wife boug...   \n",
+       "1      5.0  I have tested dozens of SDHC and micro-SDHC ca...   \n",
+       "2      1.0  NOTE:  please read the last update (scroll to ...   \n",
+       "\n",
+       "   wilson_lower_bound  \n",
+       "0            0.957544  \n",
+       "1            0.936519  \n",
+       "2            0.912139  "
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_df_final = review_df[['overall','reviewText','wilson_lower_bound']]\n",
+    "review_df_final.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python -m spacy download en_core_web_sm\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explanation of below Pre Process Function:\n",
+    "    * Stop Words: Words like \"is\", \"for\", etc., will be removed since they are in the stopword list.\n",
+    "    * Punctuation: Tokens like \"#\", \"@\", \".\", \"<\", \">\" are removed since they are punctuation.\n",
+    "    * Digits: Tokens like \"99\" and \"34working\" are removed because they contain numbers.\n",
+    "    * Case-insensitive Uniqueness: The function ensures words like \"Bye\" and \"bye\" are considered the same and are only kept once.\n",
+    "    * Lemmatization: The words are lemmatized to their base form to make sure variations like \"working\" and \"work\" are treated consistently."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "import nltk\n",
+    "import spacy\n",
+    "\n",
+    "\n",
+    "# Load SpaCy model (use 'en_core_web_sm' for English)\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "stop_words = nltk.corpus.stopwords.words('english')\n",
+    "\n",
+    "def pre_process(txt):\n",
+    "    tokens = nlp(txt)\n",
+    "    existed_tokens =set()\n",
+    "    filtered_tokens =[]\n",
+    "\n",
+    "    # Filter out:\n",
+    "    # 1. Punctuation\n",
+    "    # 2. Digits or alphanumeric tokens\n",
+    "    # 3. Tokens containing non-alphabetic characters (e.g., Hello@, 34working)\n",
+    "    # 4. Ensure case-insensitive uniqueness based on lemmatization\n",
+    "    # 4. Stop words\n",
+    "\n",
+    "    for token in tokens:\n",
+    "        # Lemmatize the token and convert to lowercase for uniformity\n",
+    "        lemmatized_word = token.lemma_.lower()\n",
+    "        if lemmatized_word not in existed_tokens and \\\n",
+    "                token.text not in string.punctuation  and \\\n",
+    "                not token.is_digit and \\\n",
+    "                token.text.isalpha() and \\\n",
+    "                token.text.lower() not in stop_words:\n",
+    "            \n",
+    "            filtered_tokens.append(token.text)\n",
+    "            existed_tokens.add(lemmatized_word) # Track lemmatized word to ensure uniqueness\n",
+    "    \n",
+    "    return filtered_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['everything',\n",
+       " 'everyone',\n",
+       " 'Bye',\n",
+       " 'correctly',\n",
+       " 'testing',\n",
+       " 'hospital',\n",
+       " 'patient']"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre_process(\"If # everything Hello@ everyone . Bye 99 is 34working correctly, < this testing in hospital for patient >  bye> EveryOne\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now lets apply above Pre Process function on Reviews Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "overall               float64\n",
+       "reviewText             object\n",
+       "wilson_lower_bound    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_df_final.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       [UPDATE, lovely, wife, bought, Samsung, Galaxy...\n",
+       "1       [tested, dozens, SDHC, micro, cards, One, dist...\n",
+       "2       [NOTE, please, read, last, update, scroll, bot...\n",
+       "3       [card, gets, hot, enough, painful, defective, ...\n",
+       "4       [Sandisk, announcement, first, GB, micro, SD, ...\n",
+       "                              ...                        \n",
+       "4908    [probably, Nth, memory, card, bought, sandisk,...\n",
+       "4909    [use, Samsung, Galaxy, store, photos, videos, ...\n",
+       "4910    [awesome, Worked, well, Surface, tablet, later...\n",
+       "4911    [amazing, amount, storage, putting, micro, chi...\n",
+       "4912    [heard, bad, things, gb, Micro, SD, card, crap...\n",
+       "Name: reviewText, Length: 4913, dtype: object"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_df_final['reviewText'].apply(pre_process)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import string\n",
+    "import spacy\n",
+    "from spacy.lang.en.stop_words import STOP_WORDS\n",
+    "\n",
+    "# Load SpaCy model (use 'en_core_web_sm' for English)\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
+    "def pre_process_batch(texts):\n",
+    "    # Initialize set to track unique lemmatized words (case-insensitive)\n",
+    "    existed_tokens = set()\n",
+    "    filtered_tokens_list = []\n",
+    "    \n",
+    "    for doc in nlp.pipe(texts, batch_size=1000, n_process=4):  # Use batch processing and parallelism\n",
+    "        #  nlp.pipe() Avoid the overhead of repeatedly calling nlp() for each sentence or document. \n",
+    "        #  This can speed up processing dramatically for large volumes of text.\n",
+    "        filtered_tokens = []\n",
+    "        \n",
+    "        for token in doc:\n",
+    "            # Lemmatize the token and convert to lowercase for uniformity\n",
+    "            lemmatized_word = token.lemma_.lower()\n",
+    "\n",
+    "            # Filter out punctuation, digits, stop words, and ensure uniqueness based on lemmatized form\n",
+    "            if lemmatized_word not in existed_tokens and \\\n",
+    "               token.text not in string.punctuation and \\\n",
+    "               not token.isdigit() and \\\n",
+    "               token.text.isalpha() and \\\n",
+    "               token.text.lower() not in STOP_WORDS:\n",
+    "                filtered_tokens.append(token.text)\n",
+    "                existed_tokens.add(lemmatized_word)  # Track lemmatized word to ensure uniqueness\n",
+    "        \n",
+    "        filtered_tokens_list.append(filtered_tokens)\n",
+    "    \n",
+    "    return filtered_tokens_list\n"
+   ]
   }
  ],
  "metadata": {
